Сделал первичную разметку приложения. Приступил к циклической отрисовке списка слайдов

--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -6,11 +6,18 @@
 
 .b-app__footer
 {
+    position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: end;
 }
 
 .b-footer__content_wrapper
 {
     background: #d4d4d4;
+    padding: 10px 20px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
