--- a/src/app.module.css
+++ b/src/app.module.css
@@ -4,14 +4,8 @@
     padding: 0;
 }
 
-.b-app
+.app
 {
     display: flex;
     flex-direction: column;
-}
-
-.b-app__container
-{
-    display: flex;
-    flex-direction: row;
 }
