--- a/src/TopBar/TopBarButtons/TopBarButtons.module.css
+++ b/src/TopBar/TopBarButtons/TopBarButtons.module.css
@@ -13,12 +13,22 @@
     padding: 4px;
     background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
     border-radius: 6px;
-    -moz-box-sizing:border-box;
-    -webkit-box-sizing:border-box;
-    box-sizing:border-box
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    transition: all 0.5s ease-out;
+}
+
+.button_export:hover, .button_import:hover, .button_preview:hover
+{
+    transition: all 0.5s ease-out;
+    transform: translateY(-5px);
 }
 
 .content {
+    color: black;
+    display: block;
+    text-decoration: none;
     background: #fff;
     padding: 5px 12px;
     font-size: 18px;
