--- a/src/Presentation/SlideList/MiniSlide.module.css
+++ b/src/Presentation/SlideList/MiniSlide.module.css
@@ -1,13 +1,9 @@
 .wrapper
 {
-    width: 80%;
-    height: 15%;
+    width: 242px;
+    height: 137px;
     border: 1px solid;
     border-radius: 20px;
     margin: 10px auto;
-}
-
-.element
-{
-    padding: 18px 0 0 15px;
+    position: relative;
 }
