--- a/src/App.module.css
+++ b/src/App.module.css
@@ -9,3 +9,15 @@
     display: flex;
     flex-direction: column;
 }
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #00000089;
+}
