--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,7 +2,6 @@
 {
     font-family: Roboto, sans-serif;
     font-style: normal;
-
     cursor: pointer;
 }
 
@@ -23,4 +22,10 @@
 .button_color_white
 {
     background: #ffffff;
+}
+
+.button:hover.button_color_white
+{
+    color: #000000;
+    background: #e0e0e0;
 }
