--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,7 @@
 .header
 {
     height: 80px;
-
     display: flex;
-
     background: rgba(0, 56, 255, 0.63);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
 }
@@ -11,7 +9,6 @@
 .header__logo
 {
     padding: 20px 15px;
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,7 +26,6 @@
     font-weight: normal;
     font-size: 24px;
     line-height: 28px;
-
     color: #ffffff;
 }
 
@@ -40,4 +36,9 @@
     justify-content: center;
     align-items: center;
     padding-right: 20px;
+}
+
+.header__submenu
+{
+    margin-left: -6px;
 }
