RS-19 улучшил отображение контента в Popup

--- a/src/Popup/Popup.module.css
+++ b/src/Popup/Popup.module.css
@@ -27,29 +27,23 @@
     justify-content: flex-end;
 }
 
-.close-button
+.close_button
 {
-    font-size: 1.4rem;
+    font-size: 24px;
     font-weight: 700;
     line-height: 1;
     color: #000;
     opacity: .3;
     cursor: pointer;
     border: none;
+    padding: 10px 15px;
+    position: absolute;
+    top: -4px;
+    right: -4px;
+    background-color: transparent;
 }
 
-button
+.close_button:focus
 {
-    font-size: .9rem;
-    font-weight: 700;
-    border: none;
-    border-radius: 3px;
-    padding: .3rem 1rem;
-    margin-left: .5rem;
-}
-
-.button-default
-{
-    background: #247BA0;
-    color: #fff;
+    outline: none;
 }
