RS-30 коммит в локале. Есть ресайз объектов с багом

--- a/src/Presentation/CurrentSlide/SlideObject/Objects/Objects.module.css
+++ b/src/Presentation/CurrentSlide/SlideObject/Objects/Objects.module.css
@@ -12,3 +12,11 @@
 {
     border: 3px dashed #d3cde4;
 }
+
+.resizerDot
+{
+    width: 10px;
+    height: 10px;
+    background: #1098ad;
+    position: absolute;
+}
