--- a/src/Presentation/CurrentSlide/SlideObject/Objects/Objects.module.css
+++ b/src/Presentation/CurrentSlide/SlideObject/Objects/Objects.module.css
@@ -6,6 +6,7 @@
 .media
 {
     width: 100%;
+    height: 100%;
 }
 
 .selected
@@ -19,4 +20,9 @@
     height: 10px;
     background: #1098ad;
     position: absolute;
+}
+
+.textIndent
+{
+    padding: 0 6px;
 }
