--- a/src/Presentation/CurrentSlide/SlideObject/Objects/Objects.module.css
+++ b/src/Presentation/CurrentSlide/SlideObject/Objects/Objects.module.css
@@ -7,6 +7,7 @@
 {
     width: 100%;
     height: 100%;
+    user-select: none;
 }
 
 .selected
@@ -22,7 +23,18 @@
     position: absolute;
 }
 
-.textIndent
+.notSelectedText
 {
     padding: 0 6px;
+    resize: none;
+    overflow: hidden;
+    user-select: none;
+}
+
+.selectedText
+{
+    padding: 0 6px;
+    resize: none;
+    overflow: hidden;
+    user-select: all;
 }
