--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -27,6 +27,8 @@
     font-size: 24px;
     line-height: 28px;
     color: #ffffff;
+    margin-left: -3px;
+    margin-top: -2px;
 }
 
 .header__buttons-wrapper
