--- a/src/components/PresenationViewer/PresentationViewer.css
+++ b/src/components/PresenationViewer/PresentationViewer.css
@@ -3,4 +3,12 @@
     height: 100%;
     width: 100%;
     box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.presentation-viewer__slide
+{
+    box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.25);
 }
