--- a/src/Presentation/SlideList/MiniSlide.module.css
+++ b/src/Presentation/SlideList/MiniSlide.module.css
@@ -1,10 +1,30 @@
 .wrapper
 {
-    width: 242px;
+    width: 254px;
     height: 137px;
     border: 1px solid;
     border-radius: 20px;
     margin: 10px auto;
     position: relative;
     overflow: hidden;
+}
+
+.lineDragAndDrop
+{
+    position: absolute;
+    top: 156px;
+    width: 100%;
+    height: 6px;
+    background: gold;
+    border: 0;
+}
+
+.lineDragAndDropTop
+{
+    position: absolute;
+    top: 2px;
+    width: 100%;
+    height: 6px;
+    background: gold;
+    border: 0;
 }
