--- a/src/Presentation/SlideList/SlideList.module.css
+++ b/src/Presentation/SlideList/SlideList.module.css
@@ -8,10 +8,11 @@
 {
     position: absolute;
     display: flex;
-    width: 14%;
-    height: 93%;
+    width: 15%;
+    height: 87%;
     border: 1px;
     border-style: none solid none none;
+    border-color: #d5d5d5;
 }
 
 .content
