--- a/src/Header/Submenu/Dropdown/Dropdown.css
+++ b/src/Header/Submenu/Dropdown/Dropdown.css
@@ -44,6 +44,7 @@
     border-radius: 0 4px 4px 4px;
     overflow: hidden;
     z-index: 1;
+    width: 146px;
 }
 
 .dropdown_active .dropdown__item
