--- a/src/Header/Subheader/Subheader.css
+++ b/src/Header/Subheader/Subheader.css
@@ -2,6 +2,7 @@
 {
     height: 40px;
     border-bottom: 1px solid #d5d5d5;
+    display: flex;
 }
 
 .subheader__column
@@ -14,6 +15,15 @@
 .subheader__column_content_center
 {
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.subheader__object-tool
+{
+    margin-left: 30px;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
