RS-36. Добавление картинок(локально и по ссылке), также установление картинки в качестве бэка на слайде

--- a/src/Header/Subheader/Tool/Tool.css
+++ b/src/Header/Subheader/Tool/Tool.css
@@ -83,6 +83,11 @@
     background: url('./icons/item-up.svg') no-repeat center;
 }
 
+.tool__slide-bck
+{
+    background: url('./icons/slide-bck.svg') no-repeat center;
+}
+
 .tool:hover
 {
     background-color: #d5d5d5;
