--- a/src/Header/Subheader/Tool/Tool.css
+++ b/src/Header/Subheader/Tool/Tool.css
@@ -5,7 +5,8 @@
     cursor: pointer;
     transition: all 0.3ms;
     border-radius: 4px;
-    margin-left: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .tool__plus
